<resources>
    <string name="app_name">my123</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">昵称</string>
    <string name="prompt_displayname">名称</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">用户名长度大于5小于18</string>
    <string name="invalid_password">密码长度大于5小于18</string>
    <string name="login_failed">"账号或密码错误!"</string>
    <string name="register_failed">"用户名已存在!"</string>
    <string name="register_error">"注册失败"</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="toRegister">立即注册</string>
    <string name="toForget">忘记密码</string>
    <string name="invalid_displayname">用户名长度大于1小于9</string>
    <string name="record_1">今日答题数     今日答题排名</string>
    <string name="record_2">总答题数     总答题排名</string>
</resources>